@@ -114,7 +114,7 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_ProbeAntibody.sql.rpt">Problems with GXD Assay Probes/Antibodies</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_WithdrawnMarker.rpt">Withdrawn markers with GXD data</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_NonGeneMarkers.rpt">Non-gene markers with GXD annotations</A>
-<LI><A HREF="/data/reports/qcreports_db/output/GXD_NoSequence.rpt"">Genes without Sequence with GXD Annotations</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_NoSequence.rpt">Genes without Sequence with GXD Annotations</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_GenotypeNA.sql.rpt">GXD Annotations to "Not Applicable" Genotype</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_GelBand.sql.rpt">GXD Blot w/ Control = No and Strength = Not Applicable</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_DupPrimers.sql.rpt">Duplicate Primer Sets used in GXD</A>
@@ -137,6 +137,9 @@ be used at times to test reports for <I>future</I> public consumption.)
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_DevDyn.rpt">Dev Dyn papers to full code</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_Development.rpt">Development papers to full code</A>
 <LI><A HREF="/data/reports/qcreports_db/output/GXD_References.sql.rpt">Reference selected for GXD which have been not been used</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_EMAPS_MappingChecks.sql.rpt">Checks of the EMAPS:AD mapping table</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_EMAPS_MappingAdUnmappedChecks.rpt">AD terms that do not map to EMAPS IDs</A>
+<LI><A HREF="/data/reports/qcreports_db/output/GXD_EMAPS_MappingNameChecks.rpt">AD/EMAPS mapping pairs whose term names do not match</A>
 <LI><A HREF="/data/reports/qcreports_db/output/PRB_CellLine.sql.rpt">Cell Lines</A>
 <LI><A HREF="/data/reports/qcreports_db/archive/gxd">Archived GXD Reports</A>
 </OL>
