@@ -1,3 +1,9 @@
+TAG: qcreports_db-5-1-7-1
+DATE: 1/22/2014
+STAFF: oblod
+CHANGES: TR11468
+Added QC reports for EMAPA/S mapping table.
+
 TAG: qcreports_db-tr11515-BP
 DATE: 12/31/2013
 STAFF: lec
